gccida/c1/pre_gcse
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/pre_gcse/src/gcse.c:5521:23: error: use of undeclared identifier 'edge_list_0'; did you mean 'edge_list'?
v6 = pre_edge_insert( edge_list_0, v0); 
                      ^~~~~~~~~~~
                      edge_list
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/pre_gcse/src/gcse.c:4395:26: note: 'edge_list' declared here
static struct edge_list *edge_list;
                         ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/pre_gcse/src/obj/gcse.o] Error 1
